fix: add wallet_id to tranasfer and transfer query param
