# packages/api-proxy/src/v3/fil/transfers/dto/get-transfers-options.dto.ts
@@ -13,6 +13,7 @@ export class GetTransfersOption {
   updatedAtLt?: string;
   status?: TransferStatus;
   masterWalletId?: string;
+  walletId?: string;
   transferType?: TransferType;
   size: number;
   page: number;
